Import of JHELWIG/Bot-BasicBot-Pluggable-Module-Gitbot-0.01.01 from CPAN.
gitpan-cpan-distribution: Bot-BasicBot-Pluggable-Module-Gitbot
gitpan-cpan-version:      0.01.01
gitpan-cpan-path:         JHELWIG/Bot-BasicBot-Pluggable-Module-Gitbot-0.01.01.tar.gz
gitpan-cpan-author:       JHELWIG
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -10,6 +10,10 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Bot-BasicBot-Pluggable-Module-Gitbot
+provides:
+  Bot::BasicBot::Pluggable::Module::Gitbot:
+    file: lib/Bot/BasicBot/Pluggable/Module/Gitbot.pm
+    version: v0.1.1
 requires:
   Bot::BasicBot::Pluggable: 0
   File::Basename: 0
