--- a/META.yml
+++ b/META.yml
@@ -2,18 +2,27 @@
 abstract: 'A Bot::BasicBot::Pluggable Module to give out Gitweb links for commits.'
 author:
   - 'Jacob Helwig <jhelwig@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+  Test::More: 0
+  Test::TempDir: 0
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3603'
+  ExtUtils::MakeMaker: 6.42
+distribution_type: module
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Bot-BasicBot-Pluggable-Module-Gitbot
+no_index:
+  directory:
+    - inc
+    - t
 provides:
   Bot::BasicBot::Pluggable::Module::Gitbot:
     file: lib/Bot/BasicBot/Pluggable/Module/Gitbot.pm
-    version: v0.1.1
+    version: 0.01.03
 requires:
   Bot::BasicBot::Pluggable: 0
   File::Basename: 0
@@ -22,9 +31,10 @@ requires:
   Git: 0
   MooseX::Declare: 0
   Text::Pluralize: 0
+  perl: 5.8.0
 resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Bot-BasicBot-Pluggable-Module-Gitbot
   homepage: http://github.com/jhelwig/Bot-BasicBot-Pluggable-Module-Gitbot
   license: http://dev.perl.org/licenses/
   repository: git://github.com/jhelwig/Bot-BasicBot-Pluggable-Module-Gitbot.git
-version: 0.01
+version: 0.01.03
